asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__branch__branch_menu.snap
---
source: asyncgit/src/lib/tui/git/tests/branch.rs
assertion_line: 14
expression: ctx.redact_buffer()
---
 Branches                                                                       |
▌* main                                                                         |
   merged                                                                       |
   unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Branch                                                                          |
b Checkout branch/revision                                                      |
c Checkout new branch                                                           |
K Delete branch                                                                 |
q/<esc> Quit/Close                                                              |
styles_hash: c4812f62d5c8483d
