asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__branch__checkout_new_branch.snap
---
source: asyncgit/src/lib/tui/git/tests/branch.rs
assertion_line: 29
expression: ctx.redact_buffer()
---
▌On branch new                                                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main merged new origin/main add initial-file                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git checkout -b new                                                           |
Switched to a new branch 'new'                                                  |
styles_hash: c7925dfc1f0f00cd
