asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__branch__delete_branch_empty.snap
---
source: asyncgit/src/lib/tui/git/tests/branch.rs
assertion_line: 44
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main merged origin/main add initial-file                               |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
Branch                                                                          |
b Checkout branch/revision                                                      |
c Checkout new branch                                                           |
K Delete branch                                                                 |
q/<esc> Quit/Close                                                              |
────────────────────────────────────────────────────────────────────────────────|
! Branch name required                                                          |
styles_hash: 343b1fffa75cf86c
