asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__branch__delete_branch_input.snap
---
source: asyncgit/src/lib/tui/git/tests/branch.rs
assertion_line: 39
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                                      |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d merged                                                          |
Deleted branch merged (was b66a0bf).                                            |
styles_hash: fe4eba566a31096
