asyncgit/src/lib/tui/git/tests/snapshots/gnostr_asyncgit__tui__git__tests__branch__delete_branch_selected.snap
---
source: asyncgit/src/lib/tui/git/tests/branch.rs
assertion_line: 34
expression: ctx.redact_buffer()
---
 Branches                                                                       |
 * main                                                                         |
▌  unmerged                                                                     |
                                                                                |
 Remote origin                                                                  |
   origin/HEAD                                                                  |
   origin/main                                                                  |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git branch -d merged                                                          |
Deleted branch merged (was b66a0bf).                                            |
styles_hash: 653adde7e95e076f
